fix path resolving in build
